<resources>
    <string name="app_name">MakeNBake</string>

    <!--This is the names for the steps -->
    <string name="steps">Step:</string>
    <string name="short_description">Short Description:</string>
    <string name="description">Description:</string>

    <!--These are the names for the ingredients -->
    <string name="quantity">Quantity:</string>
    <string name="measure">Measure:</string>
    <string name="ingredient">Ingredient:</string>

    <!--These are the names for the recipes -->
    <string name="error">there is an error fetching the data</string>

    <string name="space">\u0020</string>
    <string name="ingredients">Ingredients</string>
    <string name="step">Step</string>
    <string name="fontPath">fonts/dealers.otf</string>
    <string name="no_video_found">No video found here</string>
    <string name="pick_a_choice">\"Let me show you how to make a cake ahh haaa\"</string>
    <string name="servings">servings</string>
    <string name="recipe_name">recipe name</string>
    <string name="the_chef">TODO</string>
    <string name="home_screen_image">TODO</string>
    <string name="the_item_pie">the_pie</string>
    <string name="no_video_mage">TODO</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ingredients_here">ingredients here</string>

</resources>
